src/test/deca/context/invalid/type-unary-minus-string.context
type-unary-minus-string.deca:11: